2015-09-12  6.9.2-1 Cristy  <quetzlzacatenango@image...>
  * New version 6.9.2-1, GIT revision 10198:e07e6b1:20150912.

2015-08-15  6.9.2-1 Cristy  <quetzlzacatenango@image...>
  * Support color compliance for TXT format (e.g. -define txt:compliance=css)
    (bug report from Anthony).
  * The first argument of a hsl() color is integer, not percentage (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=2&t=26072).
  * Limit -fx recursive to avoid stack overflow (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=28200).
  * Support inline images with data URLS.
  * Report progress less often (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=28299).
  * Don't set image colorspace to gray for -alpha copy option.
  * Fixed a possible memory leak associated with the -sampling-factor option.

2015-08-15  6.9.2-0 Cristy  <quetzlzacatenango@image...>
  * New version 6.9.2-0, GIT revision 10143:3534f6d:20150815.

2015-08-10  6.9.2-0 Cristy  <quetzlzacatenango@image...>
  * Swap pixels for -spread command-line option (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=1&t=28043).
  * fx logical operations short circuit (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=28179).
  * Type cast intensity variable (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=28182).
  * Fix ModulusAdd & ModulusSubstract for HDRI compositing (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=28186).

2015-07-25  6.9.2-0 Dirk Lemstra <dirk@lem.....org>
  * Added "-set colorspace:auto-grayscale=false" that will prevent automatic
    conversion to grayscale inside coders that support grayscale.
  * Fixed -list weight and the options for -weight.
  * Added fontFamily, fontStyle, fontWeight and textUnderColor to the Image
    class of Magick++.
  * Fixed reading Photoshop layers of LSB TIFF files (reference