@@ -1,6 +1,10 @@
 2015-09-12  6.9.2-1 Cristy  <quetzlzacatenango@image...>
   * New version 6.9.2-1, GIT revision 10198:e07e6b1:20150912.
 
+2015-09-13  6.9.2-1 Dirk Lemstra <dirk@lem.....org>
+  * Preserving image origin in TGA files (reference
+    http://www.imagemagick.org/discourse-server/viewtopic.php?f=1&t=28310).
+
 2015-08-15  6.9.2-1 Cristy  <quetzlzacatenango@image...>
   * Support color compliance for TXT format (e.g. -define txt:compliance=css)
     (bug report from Anthony).
